--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 *.log
+target/
+
+/application.properties
+/application-*.properties
+/*/application.properties
+/*/application-*.properties
+
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
